--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_svg: ^0.22.0
+  dotted_border: ^2.0.0+1
 
 
   # The following adds the Cupertino Icons font to your application.
